rbacmultitenancydemo/kyverno/overlay/policies/disable-templates.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-templates
  annotations:
spec:
  rules:
  - name: "disable-templates"
    match:
      any:
      - resources:
          kinds:
          - policy.open-cluster-management.io/v1/Policies
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(policy.open-cluster-management.io/disable-templates): true
