rbacmultitenancydemo/kyverno/overlay/policies/restrict-blueteam-destination.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-blueteam-destination
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-destination-blueteam
    match:
      resources:
        kinds:
        - ApplicationSet  
      subjects:
      - kind: Group
        name: blue-sre-group
    validate:
      message: "For any `red-sre-group` member, creation of ArgoCD Application must be against the `blueteam` namespace pattern"
      pattern:
        spec:  
          template:
            spec:
              destination:
                namespace: blueteam*
