rbacmultitenancydemo/kyverno/overlay/policies/restrict-blueteam-to-its-appproject.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-blueteam-to-its-appproject
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-to-argoproject
    match:
      resources:
        kinds:
        - Application
      subjects:
      - kind: Group
        name: blue-sre-group
    validate:
      message: "For any `blue-sre-group` member, creation of ArgoCD Application must be against the `blueproject` AppProject."
      pattern:
        spec:
          project: blueproject
