rbacmultitenancydemo/kyverno/overlay/policies/restrict-blueteam-to-its-placement.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-blueteam-to-its-appproject
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-to-argoproject
    match:
      resources:
        kinds:
        - ApplicationSet 
      subjects:
      - kind: Group
        name: blue-sre-group
    validate:
      message: "For any `blue-sre-group` member, creation of ArgoCD Application must be against blue-placement"
      pattern:
        spec:
          predicates:
            requiredClusterSelector:
              labelSelector:
                matchLabels:
                  cluster.open-cluster-management.io/placement: blue-placement
